--- a/src/vue-web/nginx.conf
+++ b/src/vue-web/nginx.conf
@@ -18,7 +18,7 @@ server {
 
     location /api/ {
         rewrite ^/api/(.*)$ /$1 break;
-        proxy_pass http://39.106.1.120:28080;    
+        proxy_pass http://ssadmin-server:28080/;    
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header REMOTE-HOST $remote_addr;
